--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
@@ -1,5 +1,5 @@
 //A.K.A. liquid hydrogen
-RESOURCE_DEFINITION:NEEDS[!ClassicStockResources]
+RESOURCE_DEFINITION
 {
 	name = Propellium
 	displayName = Propellium
@@ -15,7 +15,7 @@ RESOURCE_DEFINITION:NEEDS[!ClassicStockResources]
 	volume = 5
 }
 
-STORAGE_TEMPLATE:NEEDS[!ClassicStockResources]
+STORAGE_TEMPLATE
 {
 	name = Propellium
 	author = Angel-125
@@ -30,27 +30,50 @@ STORAGE_TEMPLATE:NEEDS[!ClassicStockResources]
 		amount = 1800
 		maxAmount = 1800
 	}
-
 }
 
-GLOBAL_RESOURCE:NEEDS[!ClassicStockResources]
+STORAGE_TEMPLATE
+{
+	name = PropLox
+	author = JadeOfMaar
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Propellium
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/PropelliumGlow
+	description = This kit stores Propellium and Oxidizer. The lighter solution for efficient upper stage and vacuum propulsion.
+	templateTags = stowage
+
+	// 10:1 approx
+	RESOURCE
+	{
+		name = Propellium
+		amount = 1636
+		maxAmount = 1636
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		amount = 163
+		maxAmount = 163
+	}
+}
+
+GLOBAL_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 3
 	
 	Distribution
-	{
-        	PresenceChance = 100
-	        MinAbundance = 0.2
-	        MaxAbundance = 1
-	        Variance = 0
-	        MinAltitude = 2
-	        MaxAltitude = 2
-	        MinRange = 10
-	        MaxRange = 10
-	}
+    {
+        PresenceChance = 100
+        MinAbundance = 0.2
+        MaxAbundance = 1
+        Variance = 0
+        MinAltitude = 2
+        MaxAltitude = 2
+        MinRange = 10
+        MaxRange = 10
+    }
 }
-PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 2
@@ -65,25 +88,25 @@ PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
 		Dispersal = 50
 	}
 }
-PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 3
 	PlanetName = Sun
 	
 	Distribution
-	{
-        	PresenceChance = 100
-	        MinAbundance = 150
-	        MaxAbundance = 150
-	        MinAltitude = 10
-	        MaxAltitude = 10
-	        MinRange = 20
-	        MaxRange = 20
-        	Variance = 0
-	}
+    {
+        PresenceChance = 100
+        MinAbundance = 150
+        MaxAbundance = 150
+        MinAltitude = 10
+        MaxAltitude = 10
+        MinRange = 20
+        MaxRange = 20
+        Variance = 0
+    }
 }
-PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 2
@@ -97,21 +120,21 @@ PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
 		Variance = 10
 	}
 }
-PLANETARY_RESOURCE:NEEDS[!ClassicStockResources]
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 3
 	PlanetName = Jool
 	
 	Distribution
-	{
-	        PresenceChance = 100
-	        MinAbundance = 30
-	        MaxAbundance = 60
-	        MinAltitude = 0.1
-	        MaxAltitude = 0.1
-	        MinRange = 80
-	        MaxRange = 100
-        	Variance = 0
-	}
+    {
+        PresenceChance = 100
+        MinAbundance = 30
+        MaxAbundance = 60
+        MinAltitude = 0.1
+        MaxAltitude = 0.1
+        MinRange = 80
+        MaxRange = 100
+        Variance = 0
+    }
 }
