--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Raptium.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Raptium.cfg
@@ -1,5 +1,5 @@
 //A.K.A. (refined) Liquid Methane
-RESOURCE_DEFINITION:NEEDS[!ClassicStockResources]
+RESOURCE_DEFINITION
 {
 	name = Raptium
 	displayName = Raptium
@@ -14,7 +14,7 @@ RESOURCE_DEFINITION:NEEDS[!ClassicStockResources]
 	volume = 5
 }
 
-STORAGE_TEMPLATE:NEEDS[!ClassicStockResources]
+STORAGE_TEMPLATE
 {
 	name = Raptium
 	author = JadeOfMaar
