--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Submarine\WBIAquaticEngine.cs" />
     <Compile Include="Submarine\WBIDiveComputer.cs" />
     <Compile Include="Submarine\WBIPressureOverride.cs" />
+    <Compile Include="WBIModuleResourceHarvester.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
