--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Contracts\WBIFerryKerbalParam.cs" />
     <Compile Include="Contracts\WBIKerbalStayParam.cs" />
     <Compile Include="Converters\WBIGasTurbine.cs" />
+    <Compile Include="Converters\WBIModuleResourceHarvester.cs" />
     <Compile Include="Converters\WBIOmniConverter.cs" />
     <Compile Include="KIS\WBIKISInventoryManager.cs" />
     <Compile Include="Parts\WBIModuleAsteroidResource.cs" />
@@ -182,7 +183,7 @@
     <Compile Include="Submarine\WBIAquaticEngine.cs" />
     <Compile Include="Submarine\WBIDiveComputer.cs" />
     <Compile Include="Submarine\WBIPressureOverride.cs" />
-    <Compile Include="WBIModuleResourceHarvester.cs" />
+    <Compile Include="Utilities\WBIEditorLoader.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
