--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Converters\WBIGasTurbine.cs" />
     <Compile Include="Converters\WBIModuleResourceHarvester.cs" />
     <Compile Include="Converters\WBIOmniConverter.cs" />
-    <Compile Include="KIS\WBIKISInventoryManager.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISInventoryManager.cs" />
     <Compile Include="Parts\WBIModuleAsteroidResource.cs" />
     <Compile Include="PlayModes\PlayModesWindow.cs" />
     <Compile Include="ResourceRefinery\WBIResourceAdder.cs" />
@@ -107,7 +107,7 @@
     <Compile Include="Switchers\WBITextureSwitcher.cs" />
     <Compile Include="PlayModes\WBTAppButton.cs" />
     <Compile Include="PlayModes\WBIPlayModeHelper.cs" />
-    <Compile Include="KIS\WBIKISInventoryWrapper.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISInventoryWrapper.cs" />
     <Compile Include="IVAUtils\ButtonClickDelegate.cs" />
     <Compile Include="PropModules\InternalPlasmaScreen.cs" />
     <Compile Include="IVAUtils\ExternalCamera.cs" />
@@ -146,19 +146,19 @@
     <Compile Include="PropModules\WBIInternalButtonCabinLight.cs" />
     <Compile Include="PropModules\WBIPropStateHelper.cs" />
     <Compile Include="Switchers\WBIConvertibleStorage.cs" />
-    <Compile Include="KIS\WBIKISSeatInventoryConfig.cs" />
-    <Compile Include="KIS\WBISeatInventoryHelper.CS" />
+    <Compile Include="Wrappers\KIS\WBIKISSeatInventoryConfig.cs" />
+    <Compile Include="Wrappers\KIS\WBISeatInventoryHelper.CS" />
     <Compile Include="Science\WBIExperimentLab.cs" />
     <Compile Include="Science\WBIModuleScienceExperiment.cs" />
     <Compile Include="Science\WBIExperimentManifest.cs" />
     <Compile Include="Utilities\WBINodeMover.cs" />
-    <Compile Include="KIS\WBIKISInventoryView.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISInventoryView.cs" />
     <Compile Include="PropModules\WBIInternalMissionFlag.cs" />
     <Compile Include="Manifest\WBIManifest.cs" />
     <Compile Include="Manifest\WBIManifestScenario.cs" />
     <Compile Include="Manifest\WBIResourceManifest.cs" />
-    <Compile Include="KIS\WBIKISItem.cs" />
-    <Compile Include="KIS\WBIKISIcon.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISItem.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISIcon.cs" />
     <Compile Include="Manifest\WBIKISInventoryManifest.cs" />
     <Compile Include="Utilities\WBIEngineRepLoss.cs" />
     <Compile Include="Contracts\WBIReturnKerbalHome.cs" />
@@ -174,8 +174,8 @@
     <Compile Include="ResourceRefinery\WBIRefineryView.cs" />
     <Compile Include="ToolTips\WBIToolTipManager.cs" />
     <Compile Include="ToolTips\WBIToolTipView.cs" />
-    <Compile Include="KIS\WBIKISAddonConfig.cs" />
-    <Compile Include="KIS\WBIKISWrapper.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISAddonConfig.cs" />
+    <Compile Include="Wrappers\KIS\WBIKISWrapper.cs" />
     <Compile Include="Switchers\WBIOmniStorage.cs" />
     <Compile Include="GUI\WBISingleOpsView.cs" />
     <Compile Include="Submarine\WBIBallastTank.cs" />
@@ -218,7 +218,15 @@
 xcopy /Y "$(TargetPath)" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"﻿
 xcopy /Y "$(TargetDir)$(TargetName).dll" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"
 xcopy /Y "$(TargetDir)$(TargetName).pdb" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"
-xcopy /Y "$(TargetDir)$(TargetName).dll.mdb" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"</PostBuildEvent>
+xcopy /Y "$(TargetDir)$(TargetName).dll.mdb" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"
+
+xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000WildBlueTools\"
+xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\ClassicStockResources\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\ClassicStockResources\"
+xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\"
+xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\WildBlueTools.version" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\Notes\"
+xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\ClassicStockResources\ClassicStockResources.version" "C:\Projects\KSP\WildBlueIndustries\ClassicStockResources\Notes\"
+
+del "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000WildBlueTools\MiniAVC.xml"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
