--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Converters\WBIGasTurbine.cs" />
     <Compile Include="Converters\WBIModuleResourceHarvester.cs" />
     <Compile Include="Converters\WBIOmniConverter.cs" />
+    <Compile Include="GUI\HarvestView.cs" />
     <Compile Include="Wrappers\KIS\WBIKISInventoryManager.cs" />
     <Compile Include="Parts\WBIModuleAsteroidResource.cs" />
     <Compile Include="PlayModes\PlayModesWindow.cs" />
@@ -220,9 +221,9 @@ xcopy /Y "$(TargetDir)$(TargetName).dll" "C:\KSPDev\GameData\WildBlueIndustries\
 xcopy /Y "$(TargetDir)$(TargetName).pdb" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"
 xcopy /Y "$(TargetDir)$(TargetName).dll.mdb" "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\Plugins\"
 
-xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000WildBlueTools\"
-xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\ClassicStockResources\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\ClassicStockResources\"
-xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\"
+xcopy /Y /E  "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000WildBlueTools\"
+xcopy /Y /E  "C:\KSPDev\GameData\WildBlueIndustries\ClassicStockResources\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\ClassicStockResources\"
+xcopy /Y /E  "C:\KSPDev\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\*.*" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\GameData\WildBlueIndustries\000ABARISBridgeDoNotDelete\"
 xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\000WildBlueTools\WildBlueTools.version" "C:\Projects\KSP\WildBlueIndustries\WildBlueTools\Notes\"
 xcopy /Y  "C:\KSPDev\GameData\WildBlueIndustries\ClassicStockResources\ClassicStockResources.version" "C:\Projects\KSP\WildBlueIndustries\ClassicStockResources\Notes\"
 
