--- a/GameData/WildBlueIndustries/001KerbalActuators/Parts/Utility/SampleArm/SampleArm.cfg
+++ b/GameData/WildBlueIndustries/001KerbalActuators/Parts/Utility/SampleArm/SampleArm.cfg
@@ -39,6 +39,7 @@ PART
 	crashTolerance = 45
 	breakingForce = 5500
 	breakingTorque = 5500
+	bulkheadProfiles = srf
 	maxTemp = 900
 	fuelCrossFeed = True
 	heatConductivity = 0.001
