--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -73,7 +73,7 @@ OMNICONVERTER
 	INPUT_RESOURCE
 	{
 		ResourceName = NuclearFuel
-		Ratio = 0.0000015
+		Ratio = 0.000001
 		FlowMode = NO_FLOW
 	}
 
@@ -87,7 +87,7 @@ OMNICONVERTER
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
-		Ratio = 25
+		Ratio = 125
 		DumpExcess = false
 		FlowMode = ALL_VESSEL
 	}
@@ -959,6 +959,118 @@ OMNICONVERTER
 		ResourceName = ResearchKits
 		Ratio = 0.02
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+}
+
+//EL
+OMNICONVERTER:NEEDS[Launchpad]
+{
+	templateTags = lab
+	TechRequired = advExploration
+	ConverterName = Smelt Metal
+	description = Smelt metal into metal ore
+	StartActionName = Start metal smelter
+	StopActionName = Stop metal smelter
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE 
+	{
+		ResourceName = MetalOre
+		Ratio = 0.7
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE 
+	{	
+		ResourceName = ElectricCharge
+		Ratio = 7.5		
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Metal
+		Ratio = 0.4935
+		FlowMode = ALL_VESSEL
+	}
+}
+
+OMNICONVERTER:NEEDS[Launchpad]
+{
+	templateTags = lab
+	TechRequired = advExploration
+	ConverterName = Recycle scrap metal
+	description = Take metal scrap and turn it back into metal
+	StartActionName = Start scrap metal recycler
+	StopActionName = Stop scrap metal recycler
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE 
+	{
+		ResourceName = ScrapMetal
+		Ratio = 9.75
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE 
+	{	
+		ResourceName = ElectricCharge
+		Ratio = 1.0		
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Metal
+		Ratio = 1
+		FlowMode = ALL_VESSEL
+	}
+}
+
+OMNICONVERTER:NEEDS[Launchpad]
+{
+	templateTags = lab
+	TechRequired = advExploration
+	ConverterName = Equipment scrapper
+	description = Take equipment and turn it into scrap metal
+	StartActionName = Start equipment scrapper
+	StopActionName = Stop equipment scrapper
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE 
+	{
+		ResourceName = Equipment
+		Ratio = 0.1
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE 
+	{	
+		ResourceName = ElectricCharge
+		Ratio = 5.0		
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = ScrapMetal
+		Ratio = 0.0625
 		FlowMode = ALL_VESSEL
 	}
 }
