--- a/GameData/WildBlueIndustries/000WildBlueTools/Experiments/BasicExperiments.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Experiments/BasicExperiments.cfg
@@ -92,6 +92,9 @@ EXPERIMENT_DEFINITION
 	//Can include one or more of: DOCKED, ESCAPING, FLYING, LANDED, PRELAUNCH, ORBITING, SPLASHED, SUB_ORBITAL
 	situations = ORBITING;LANDED;SPLASHED
 
+	//Space situations include INSPACEHIGH and INSPACELOW. Separate these by semicolon.
+//	spaceSituations = INSPACEHIGH;INSPACELOW
+
 	//A custom part module that will be run upon successful completion of an experiment.
 	//Set this up like you would with any other part module.
 	//This gives you the ability to have custom benefits when an experiment completes.
