--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -1611,3 +1611,58 @@ OMNICONVERTER:NEEDS[SnacksFreshAir]
 		FlowMode = ALL_VESSEL
 	}
 }
+
+OMNICONVERTER:NEEDS[SnacksUtils]
+{
+	templateTags = hab
+	TechRequired = spaceExploration
+	description = Reconstitutes soil into snacks. Supports a crew of 3.
+	ConverterName = Soil Recycler
+	StartActionName = Start Soil Recycler
+	StopActionName = Stop Soil Recycler
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	ExperienceEffect = ScienceSkill
+	EfficiencyBonus = 1
+
+	//Background processing lets you run the converter even while the vessel is unloaded. This is especially helpful for converters that handle life support.
+	//USE SPARINGLY! Background processing will slow down the game. For performance reasons, converters will be run in the background once every six hours.
+	enableBackgroundProcessing = true
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Soil
+		Ratio = 0.0004167
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Minerite
+		Ratio = 0.00002315
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Nitronite
+		Ratio = 0.00002315
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 3
+		FlowMode = STAGE_PRIORITY_FLOW
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Snacks
+		Ratio = 0.00025002
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+}
