--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -284,6 +284,52 @@ OMNICONVERTER
 {
 	templateTags = lab
 	TechRequired = advScienceTech
+	ConverterName = Cryofuels Maker
+	description = Split Water into Propellium and Oxidizer
+	StartActionName = Start Making Cryofuels
+	StopActionName = Stop Making Cryofuels
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ScienceSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE
+	{
+		ResourceName = Water
+		Ratio = 1
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 22
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Oxidizer
+		Ratio = 0.779
+		DumpExcess = true
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Propellium
+		Ratio = 1.56
+		DumpExcess = true
+		FlowMode = ALL_VESSEL
+	}
+}
+
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = advScienceTech
 	ConverterName = Propellium Distiller
 	description = Distill Propellium from Liquid Fuel.
 	StartActionName = Start Propellium Distiller
