--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/OmniStorageModifiers.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/OmniStorageModifiers.cfg
@@ -12,7 +12,6 @@ OMNIRESOURCECOMBO
 		ratio = 0.45
 		maxAmountMultiplier = 1.0 //Multiplies the max storage capacity of the combo resource by this amount. Default is 1.0 so you can omit this.
 	}
-
 	RESOURCE
 	{
 		name = Oxidizer
@@ -20,6 +19,53 @@ OMNIRESOURCECOMBO
 		maxAmountMultiplier = 1.0 //Multiplies the max storage capacity of the combo resource by this amount. Default is 1.0 so you can omit this.
 	}
 }
+OMNIRESOURCECOMBO
+{
+	RESOURCE
+	{
+		name = RHK1
+		ratio = 0.45
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		ratio = 0.55
+	}
+}
+OMNIRESOURCECOMBO
+{
+	RESOURCE
+	{
+		name = LqdHydrogen
+		ratio = 0.9375
+		maxAmountMultiplier = 1.0
+	}
+
+	RESOURCE
+	{
+		name = Oxidizer
+		ratio = 0.0625
+		maxAmountMultiplier = 1.0
+	}
+}
+
+OMNIRESOURCECOMBO
+{
+	RESOURCE
+	{
+		name = Propellium
+		ratio = 0.75
+		maxAmountMultiplier = 1.5
+	}
+
+	RESOURCE
+	{
+		name = Oxidizer
+		ratio = 0.25
+		maxAmountMultiplier = 1.5
+	}
+}
+
 
 //The amount of resource in a part depends upon the size of the storage in liters, the number of resources in the container, the number of liters allocated per resource,
 //and the volume of the resource. Most stock and Classic Stock resources have a volume of 5, meaning that one unit of resource takes up 5 liters. For the OmniStorage,
