--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/OmniStorageModifiers.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/OmniStorageModifiers.cfg
@@ -6,6 +6,7 @@
 //NOTE: For now, only the first combo pattern to match the resources in the omni storage will be applied.
 OMNIRESOURCECOMBO
 {
+	name = LFO
 	RESOURCE
 	{
 		name = LiquidFuel
@@ -21,6 +22,7 @@ OMNIRESOURCECOMBO
 }
 OMNIRESOURCECOMBO
 {
+	name = RHK
 	RESOURCE
 	{
 		name = RHK1
@@ -34,6 +36,7 @@ OMNIRESOURCECOMBO
 }
 OMNIRESOURCECOMBO
 {
+	name = LH2
 	RESOURCE
 	{
 		name = LqdHydrogen
@@ -51,6 +54,7 @@ OMNIRESOURCECOMBO
 
 OMNIRESOURCECOMBO
 {
+	name = PropLox
 	RESOURCE
 	{
 		name = Propellium
