--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/OmniStorage.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/OmniStorage.cfg
@@ -34,15 +34,24 @@ OMNIRESOURCECOMBO
 }
 OMNIRESOURCECOMBO
 {
+	name = PropLox
 	RESOURCE
 	{
 		name = Propellium
-		ratio = 0.909
+		ratio = 0.75
+		maxAmountMultiplier = 0.5 // no effect due to functional conflict with MAX_RESOURCE_MULTIPLIER[Propellium]
 	}
 
 	RESOURCE
 	{
 		name = Oxidizer
-		ratio = 0.091
+		ratio = 0.25
+		maxAmountMultiplier = 0.5 // no effect due to functional conflict with MAX_RESOURCE_MULTIPLIER[Propellium]
 	}
+}
+
+MAX_RESOURCE_MULTIPLIER
+{
+	name = Propellium
+	maxAmountMultiplier = 5
 }
