--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
@@ -1,4 +1,4 @@
-//A.K.A. liquid hydrogen
+//A.K.A. liquid hydrogen. 5x density of CRP lqdHydrogen because we use 5-liter units.
 RESOURCE_DEFINITION
 {
 	name = Propellium
@@ -41,18 +41,17 @@ STORAGE_TEMPLATE
 	description = This kit stores Propellium and Oxidizer. The lighter solution for efficient upper stage and vacuum propulsion.
 	templateTags = stowage
 
-	// 10:1 approx
 	RESOURCE
 	{
 		name = Propellium
-		amount = 1636
-		maxAmount = 1636
+		amount = 1350
+		maxAmount = 1350
 	}
 	RESOURCE
 	{
 		name = Oxidizer
-		amount = 163
-		maxAmount = 163
+		amount = 450
+		maxAmount = 450
 	}
 }
 
