--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Propellium.cfg
@@ -13,6 +13,15 @@ RESOURCE_DEFINITION
    	isVisible = true
 	unitCost = 0.01
 	volume = 5
+
+	RESOURCE_DRAIN_DEFINITION
+	{
+		isDrainable = true
+		showDrainFX = true
+		drainFXPriority = 9
+		drainForceISP = 5
+		drainFXDefinition = gasDraining
+	}
 }
 
 STORAGE_TEMPLATE
@@ -41,17 +50,18 @@ STORAGE_TEMPLATE
 	description = This kit stores Propellium and Oxidizer. The lighter solution for efficient upper stage and vacuum propulsion.
 	templateTags = stowage
 
+	// 10:1 approx
 	RESOURCE
 	{
 		name = Propellium
-		amount = 1350
-		maxAmount = 1350
+		amount = 1636
+		maxAmount = 1636
 	}
 	RESOURCE
 	{
 		name = Oxidizer
-		amount = 450
-		maxAmount = 450
+		amount = 163
+		maxAmount = 163
 	}
 }
 
