--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -875,6 +875,41 @@ OMNICONVERTER
 	 }
 }
 
+OMNICONVERTER
+{
+	TechRequired = scienceTech
+	ConverterName = Ore -> Konkrete
+	description = Melt Ore into Konkrete
+	StartActionName = Ore/Konkrete On
+	StopActionName = ROre/Konkrete Off
+	AutoShutdown = true
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+		 
+	 INPUT_RESOURCE
+	 {
+		ResourceName = Ore
+		Ratio = 0.5
+		FlowMode = ALL_VESSEL
+	 }
+	 INPUT_RESOURCE
+	 {
+		ResourceName = ElectricCharge
+		Ratio = 25
+		FlowMode = ALL_VESSEL
+	 }
+	 OUTPUT_RESOURCE
+	 {
+		ResourceName = Konkrete
+		Ratio = 0.25
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	 }
+}
+
 //Blutonium Enricher
 OMNICONVERTER
 {
@@ -1157,6 +1192,42 @@ OMNICONVERTER
 	{
 		ResourceName = Hexagen
 		Ratio = 0.1
+		FlowMode = ALL_VESSEL
+	}
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 30
+		FlowMode = ALL_VESSEL
+	}
+	OUTPUT_RESOURCE
+	{
+		ResourceName = FusionPellets
+		Ratio = 0.00045
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+}
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = experimentalScience
+	%TechRequired:NEEDS[CommunityTechTree] = fusionPower
+	ConverterName = FusionPellets Processor
+	description = Produce FusionPellets from Ore, Water, Minerite, and Hexagen
+	StartActionName = Start Fusion Pellets
+	StopActionName = Stop Fusion Pellets
+	AutoShutdown = true
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ConverterSkill
+	EfficiencyBonus = 1
+
+	INPUT_RESOURCE
+	{
+		ResourceName = Ore
+		Ratio = 0.0015
 		FlowMode = ALL_VESSEL
 	}
 	INPUT_RESOURCE
