--- a/GameData/WildBlueIndustries/000WildBlueTools/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/ModuleManagerPatches/MM_TACLS.cfg
@@ -3,8 +3,8 @@ STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 	name = Food
 	author = Angel-125
 	shortName = Food
-	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupport
-	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupportGlow
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Food
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/FoodGlow
 	description = This kit stores Food.
 
 	RESOURCE
@@ -18,11 +18,29 @@ STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 
 STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 {
+	name = Water
+	author = Angel-125
+	shortName = Food
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Water
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/WaterGlow
+	description = This kit stores Water.
+
+	RESOURCE
+	{
+		name = Water
+		amount = 12941.17647058824
+		maxAmount = 12941.17647058824
+	}
+
+}
+
+STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
+{
 	name = Oxygen
 	author = Angel-125
 	shortName = Oxygen
-	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupport
-	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupportGlow
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Oxygen
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/OxygenGlow
 	description = This kit stores Oxygen.
 
 	RESOURCE
@@ -36,11 +54,11 @@ STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 
 STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 {
-	name = TAC-LS
+	name = TAC-LS 3x Supplies
 	author = Angel-125
 	shortName = TAC-LS
-	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupport
-	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupportGlow
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Snacks
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/SnacksGlow
 	description = This kit stores Oxygen, Water, and Food
 
 	RESOURCE
@@ -67,11 +85,11 @@ STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 
 STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 {
-	name = Waste
+	name = TAC-LS 3x Waste
 	author = Angel-125
 	shortName = Waste
-	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupport
-	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/LifeSupportGlow
+	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Waste
+	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/WasteGlow
 	description = This kit stores Waste, WasteWater, and CarbonDioxide
 
 	RESOURCE
