Add life support to omni combos

--- a/GameData/WildBlueIndustries/000WildBlueTools/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/ModuleManagerPatches/MM_TACLS.cfg
@@ -95,3 +95,47 @@ STORAGE_TEMPLATE:NEEDS[TacLifeSupport]
 		maxAmount = 1013732.352941176
 	}
 }
+
+OMNIRESOURCECOMBO:NEEDS[TacLifeSupport]
+{
+	name = Life Support 3x Supplies
+	RESOURCE
+	{
+		name = Food
+		ratio = 0.0097189775420313
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		ratio = 0.983857180352697
+	}
+
+	RESOURCE
+	{
+		name = Water
+		ratio = 0.00642384210527155
+	}
+}
+
+OMNIRESOURCECOMBO:NEEDS[TacLifeSupport]
+{
+	name = Life Support 3x Waste
+	RESOURCE
+	{
+		name = CarbonDioxide
+		ratio = 0.989449512047667
+	}
+
+	RESOURCE
+	{
+		name = WasteWater
+		ratio = 0.00952173802736197
+	}
+
+	RESOURCE
+	{
+		name = Waste
+		ratio = 0.00102874992497087
+	}
+}
