Fix KONSTRUCTION_TEMPLATE not actually used. Also move from common to classic stock since it requires classic stock resources.

--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/KonstructionEquipment.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/KonstructionEquipment.cfg
@@ -6,34 +6,27 @@ STORAGE_TEMPLATE
 	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_ClockWorks
 	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_ClockWorksGlow
 	TechRequired = advScienceTech
-	description = This kit stores the resources needed to create equipment. Equipment is used to outfit your modules.
+	description = This kit stores the resources needed to create Equipment. Equipment is used to outfit and repair your modules.
 	templateTags = stowage
 
 	RESOURCE
 	{
 		name = Ore
-		amount = 560
-		maxAmount = 560
+		amount = 450
+		maxAmount = 450
 	}
 
 	RESOURCE
 	{
-		name = RareMetals
-		amount = 933
-		maxAmount = 933
+		name = PreciousMetals
+		amount = 900
+		maxAmount = 900
 	}
 
 	RESOURCE
 	{
-		name = ExoticMinerals
-		amount = 933
-		maxAmount = 933
-	}
-
-	RESOURCE
-	{
-		name = Equipment
-		amount = 933
-		maxAmount = 933
+		name = Minerite
+		amount = 900
+		maxAmount = 900
 	}
 }
