--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/KonstructionKonkrete.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/KonstructionKonkrete.cfg
@@ -3,7 +3,6 @@ STORAGE_TEMPLATE
 	author = Angel-125
 	name = Konstruction (Konkrete)
 	shortName = Konstruction (Konkrete)
-	
 	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_Konstruction
 	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/Factory_KonstructionGlow
 	TechRequired = advScienceTech
@@ -13,35 +12,35 @@ STORAGE_TEMPLATE
 	RESOURCE
 	{
 		name = Ore
-		amount = 450
-		maxAmount = 450
+		amount = 360
+		maxAmount = 360
 	}
 
 	RESOURCE
 	{
 		name = Water
-		amount = 840
-		maxAmount = 840
+		amount = 360
+		maxAmount = 360
 	}
 
 	RESOURCE
 	{
-		name = Minerals
-		amount = 840
-		maxAmount = 840
+		name = Minerite
+		amount = 360
+		maxAmount = 360
 	}
 
 	RESOURCE
 	{
 		name = Slag
-		amount = 840
-		maxAmount = 840
+		amount = 360
+		maxAmount = 360
 	}
 
 	RESOURCE
 	{
 		name = Konkrete
-		amount = 840
-		maxAmount = 840
+		amount = 360
+		maxAmount = 360
 	}
 }
