--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -121,6 +121,8 @@
     <Compile Include="Utilities\WBIComponentAdder.cs" />
     <Compile Include="Utilities\WBIEngineHeat.cs" />
     <Compile Include="Utilities\WBIModuleUpdateHelper.cs" />
+    <Compile Include="Parts\WBIModuleBloakingDevice.cs" />
+    <Compile Include="WBIModuleHelmetToggle.cs" />
     <Compile Include="Wrappers\KIS\WBIKISInventoryManager.cs" />
     <Compile Include="Parts\WBIModuleAsteroidResource.cs" />
     <Compile Include="PlayModes\PlayModesWindow.cs" />
