adds flowmode = ALL_VESSEL for fusion pellet input resource and for EC output

--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -199,7 +199,7 @@ OMNICONVERTER
 	{
 		ResourceName = FusionPellets
 		Ratio = 0.0005
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	OUTPUT_RESOURCE
 	{
@@ -212,6 +212,7 @@ OMNICONVERTER
 		ResourceName = ElectroPlasma
 		Ratio = 500
 		DumpExcess = True
+		FlowMode = ALL_VESSEL
 	}
 	REQUIRED_RESOURCE
 	{
