--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -915,7 +915,7 @@ OMNICONVERTER
 {
 	TechRequired = experimentalScience
 	ConverterName = Blutonium Enricher
-	description = Enrich Blutonium with Hexagen to produce NuclearFuel for reactors and engines.
+	description = Process Blutonium produce Nuclear Fuel for reactors and engines. Gives off a small amount of Hexium as well.
 	StartActionName = Start Enricher
 	StopActionName = Stop Enricher
 	AutoShutdown = false
@@ -934,13 +934,6 @@ OMNICONVERTER
 
 	INPUT_RESOURCE
 	{
-		ResourceName = Hexagen
-		Ratio = 0.0005
-		FlowMode = ALL_VESSEL
-	}
-
-	INPUT_RESOURCE
-	{
 		ResourceName = ElectricCharge
 		Ratio = 18
 		FlowMode = ALL_VESSEL
@@ -950,6 +943,14 @@ OMNICONVERTER
 	{
 		ResourceName = NuclearFuel
 		Ratio = 0.001
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Hexagen
+		Ratio = 0.0005
 		DumpExcess = false
 		FlowMode = ALL_VESSEL
 	}
